<resources>
    <string name="app_name">不见君</string>
    <string name="menu_home">首页</string>
    <string name="service_name">👋 seeNot 不见君 👋</string>
    <string name="service_description">为了使用软件的功能，就需要开启此服务。此服务不会访问网络，因此你的数据是完全安全的，我们也不会使用任何方法获取你在做什么。我们需要那些权限仅仅是为了解析应用布局。</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_permission">权限</string>
    <string name="app_full_name">seeNot 不见君</string>
    <string name="roderick_qiu_app">作者 @RoderickQiu</string>
    <string name="delete_confirm">确认删除</string>
    <string name="empty_view">列表为空。点击\"+\"按钮新建规则。</string>
    <string name="operation_done">操作完成</string>
    <string name="channel_notification_text">不见君：服务正在运行中</string>
    <string name="channel_name">服务运行保护</string>
    <string name="channel_description">如果不允许这个通知一直显示，不见君服务可能会被系统自动结束。</string>
    <string name="service_start_failed">不见君服务没有成功开启，请前往系统无障碍设置手动开启</string>
    <string name="hide_notification">隐藏通知</string>
    <string name="reopen_function">打开总开关</string>
    <string name="function_closed">总开关被关闭，服务将不起作用。</string>
    <string name="service_not_running">部分权限未给予或程序服务不在运行，请现在打开。</string>
    <string name="permission_grant">获取权限</string>
    <string name="permission_overlay">悬浮窗权限</string>
    <string name="permission_overlay_msg">设置规则时，悬浮窗是必须的。</string>
    <string name="granted">已获取</string>
    <string name="ungranted">未得到</string>
    <string name="grant_now">获取</string>
    <string name="permission_accessibility">无障碍服务权限</string>
    <string name="permission_accessibility_msg">一切见否服务都依靠此权限。</string>
    <string name="now_open_service">进入页面，请往下拉，找到“seeNot 不见君”并打开。若找不到，请点击“已下载的应用”。</string>
    <string name="default_notification_channel">常规通知</string>
    <string name="permission_battery_msg">用于防止系统强制关闭服务，续航其实并不会被显著影响。如果跳转到的页面让你从多个选项中选择，则需要选择“无限制”才能使不见君正常运行，即不被强制关闭。</string>
    <string name="permission_battery">系统省电白名单</string>
    <string name="how_to_grant">了解获取方式</string>
    <string name="dunno_granted">无法判断，请自行确保</string>
    <string name="permission_background_msg">这些设置项作用包括正常开机自启、在后台运行并不因所谓"省电"被强制关闭。它们对不见君的功能正常运行都十分必要。</string>
    <string name="permission_background">其他的重要权限</string>
    <string name="permission_notification">通知权限</string>
    <string name="permission_notification_msg">用于发送必要通知和防止服务被强制关闭。</string>
    <string name="press_here_move">按住空白处拖动</string>
    <string name="exit">退出</string>
    <string name="rule_for_msg">对于：</string>
    <string name="set_mask_info">设置规则信息和定时</string>
    <string name="save">保存</string>
    <string name="new_subrule">新建子规则</string>
    <string name="rule_title_label">规则名：</string>
    <string name="assigner_pre_tip">
        请勿在不见君应用内或系统桌面进行设置。前往要设置的应用并点击\"刷新\"以获得正确的应用包名。若获取不正确，请尝试再点击一下程序界面空白处或推出重进，然后再点一次\"刷新\"。</string>
    <string name="rule_name_placeholder">在此输入规则名</string>
    <string name="continue_pre">继续设置</string>
    <string name="refresh">刷新</string>
    <string name="cannot_modify_after_pre">已经完成设定后不能修改对应程序。</string>
    <string name="save_succeed">保存成功</string>
    <string name="fill_the_blanks">有些必要信息还未设置，或输入信息不符合规范</string>
    <string name="no_seenot_set">不能为不见君内部和系统桌面设置规则（负一屏等通常不属于系统桌面，可以设置）</string>
    <string name="filter_ban_app_tip">当开关打开后，一进入这个应用，就会直接退出。</string>
    <string name="filter_ban_activity_tip">在此设定要强制跳出时所在的
        Activity，按\"刷新\"以获取最新结果。注：部分软件会有将多个页面合成一个 Activity
        的情况，此时可以考虑使用\"找到文字\"或\"找到元素 ID\"类规则，凭借页面上的独有特征触发退出。</string>
    <string name="filter_ban_text_tip">点击\"选择\"打开文字选择模式，并选中需要的文字，并点击\"确认\"保存。注：少数应用的部分文字无法解析。</string>
    <string name="filter_ban_id_tip">点击\"选择\"打开元素选择模式，并选择需要的元素，点击\"确认\"保存。适合一些无法找到合适触发文字的页面。</string>
    <string name="filter_auto_click_id_tip">点击\"选择\"打开元素选择模式，并选择需要自动点击的元素以获取其元素 ID，点击\"确认\"保存。</string>
    <string name="filter_auto_click_text_tip">点击\"选择\"打开文字选择模式，并选择需要自动点击的文字，点击\"确认\"保存。注：少数应用的部分文字无法解析。</string>
    <string name="filter_swipe_text_tip">点击\"选择\"打开文字选择模式，并选择一遇到就上滑返回的文字，并点击\"确认\"保存。注：少数应用的部分文字无法解析。</string>
    <string name="filter_swipe_id_tip">点击\"选择\"打开元素选择模式，并选择一遇到就上滑返回的相关元素以获取其元素 ID，并点击\"确认\"保存。</string>
    <string name="filter_ban_coor_tip">点击\"选择\"打开元素坐标选择模式，并选择需要的元素，获取其坐标（Rect），点击\"确认\"保存。适合一些既获取不到文字，也获取不到元素 ID 的极品页面——注意，尽量选择一些有独特性的元素，避免在别的页面误判。</string>
    <string name="filter_auto_click_coor_tip">点击\"选择\"打开元素坐标选择模式，并选择需要自动点击的元素以获取其元素坐标（Rect），点击\"确认\"保存。适合一些既获取不到文字，也获取不到元素 ID 的极品页面——注意，尽量选择一些有独特性的元素，避免在别的页面误判。</string>
    <string name="delete">删除</string>
    <string name="settings">设置</string>
    <string name="alreay_quit_app_filter">已有一条\"禁止进入程序\"的规则，不能增加新规则</string>
    <string name="filter_trigger">触发：</string>
    <string name="done">确认</string>
    <string name="select_target">选择</string>
    <string name="master_switch">不见君总开关</string>
    <string name="settings_general">基本设置</string>
    <string name="settings_export">数据备份</string>
    <string name="settings_export_tip">点此备份应用的全部设置和规则</string>
    <string name="settings_export_single">单条规则备份导出</string>
    <string name="settings_export_single_tip">点此导出你所想要备份或分享的单条规则</string>
    <string name="settings_import">数据导入</string>
    <string name="settings_import_tip">点此导入应用全部数据并覆盖当前数据；导入单条规则请在首页点击"添加规则"</string>
    <string name="copied_to_clipboard">已经复制到剪贴板</string>
    <string name="import_succeed">数据导入成功</string>
    <string name="import_failed">导入失败</string>
    <string name="click_right_to_set">点右侧按钮设置</string>
    <string name="click_to_apply">保存并关闭</string>
    <string name="open_assigner_failed">打开设置面板失败，请检查无障碍服务是否已经打开</string>
    <string name="cannot_get_current_id">无法获取当前元素</string>
    <string name="cannot_get_current_text">无法获得当前文字</string>
    <string name="strange_error">未知错误</string>
    <string name="back_without_save">不保存返回</string>
    <string name="settings_password_tip">启用后，在每次进入不见君软件时，都需要输入密码才能继续</string>
    <string name="settings_password">家长控制</string>
    <string name="settings_password_dialog_msg">密码框留空即为不启用家长控制</string>
    <string name="password_need">家长控制模式开</string>
    <string name="password_need_msg">需要输入密码才能继续</string>
    <string name="password_wrong">密码错误，请重试</string>
    <string name="password_right">密码正确</string>
    <string name="license_page">Licenses</string>
    <string name="timed_settings_tip">设置定时开启、关闭规则</string>
    <string name="timed_settings">规则定时</string>
    <string name="settings_advanced">高级设置</string>
    <string name="timed_edit_dialog_title">设置定时</string>
    <string name="ok">好</string>
    <string name="set_timed_title">设置定时规则名称</string>
    <string name="week_mon">周一</string>
    <string name="week_tues">周二</string>
    <string name="week_wed">周三</string>
    <string name="week_thur">周四</string>
    <string name="week_fri">周五</string>
    <string name="week_sat">周六</string>
    <string name="week_sun">周日</string>
    <string name="week_mon_s">一</string>
    <string name="week_tues_s">二</string>
    <string name="week_wed_s">三</string>
    <string name="week_thur_s">四</string>
    <string name="week_fri_s">五</string>
    <string name="week_sat_s">六</string>
    <string name="week_sun_s">日</string>
    <string name="only_once">仅当天</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="apply_week">设置作用在哪几天</string>
    <string name="rid">屏蔽</string>
    <string name="floating_start_failed">不见君服务所需悬浮窗创建失败</string>
    <string name="timed_on">时段内打开</string>
    <string name="timed_off">时段内关闭</string>
    <string name="timed_on_or_off">在这段时间内关闭或打开此规则</string>
    <string name="timed_on_or_off_tip">若仅要在这段时间内启用，请在首页选择禁用规则；同理，若仅在这段时间内关闭，则需在首页选择启用规则以生效。</string>
    <string name="closure_title">临时还是永久关闭</string>
    <string name="closure_temp">临时关闭</string>
    <string name="closure_forever">永久关闭</string>
    <string name="set_closure_reopen_time">设置多少小时后重新开启</string>
    <string name="add_rule">添加规则</string>
    <string name="reservation_lock">预约-锁定模式</string>
    <string name="reservation_lock_msg">启用后，关闭规则或者关闭总开关将需要预约，避免冲动，而开启规则不受影响；预约时间到后，10 分钟内可以无限设置</string>
    <string name="reservation_lock_dialog_msg">文本框输入为 0 即为不启用预约-锁定模式，输入的数字即为需提前预约的分钟数</string>
    <string name="reserved_title">预约模式已开启</string>
    <string name="reserved_msg">因此你现在不能操作</string>
    <string name="cancel">取消</string>
    <string name="import_single_rule">导入单条规则</string>
    <string name="import_single_dialog_msg">输入在设置界面导出的单条规则文本以导入单条不见君规则</string>
    <string name="export_log">获取服务日志</string>
    <string name="welcome">欢迎使用不见君</string>
    <string name="welcome_msg">各大APP愈加臃肿，而不见君使你能保持简单</string>
    <string name="start">让我们开始吧</string>
    <string name="welcome_msg_2">下一代屏幕时间管理方案，就在这里</string>
    <string name="welcome_priv_msg">继续使用代表同意</string>
    <string name="welcome_priv_title">《不见君使用须知》</string>
    <string name="must_need">必须先获取这些权限才能使用不见君</string>
    <string name="privacy_notice_page">隐私协议</string>
    <string name="notif">通知</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="notifications_title">不见君团队通知</string>
    <string name="no_notification_or_bad_net">暂时没有通知，或者网络缓慢。</string>
    <string name="all_offline">这些权限所获取的所有数据将保证只在本地被处理而不会上传，因此您的数据是完全安全的</string>
    <string name="permission_back">完成，返回主界面</string>
    <string name="helper">帮助</string>
    <string name="no_helper">当前页面没有说明</string>
    <string name="no_helper_msg">换个页面试试吧。</string>
    <string name="press_here_helper">帮助</string>
    <string name="close_helper">关闭帮助</string>
    <string name="set_corresp_rule">设置对应的规则</string>
    <string name="untitled">未命名</string>
    <string name="rule_for_other">这条规则是关于%s的，只能在那个程序打开时编辑。若确实在这一程序中，请点一下程序界面或滑动列表，然后重新获取</string>
    <string name="error_come">发生错误</string>
    <string name="multi_id_type3">此 id 在页面中多次使用，可能不适合当作判定条件</string>
    <string name="multi_id_type4">此 id 在页面不止一次使用，可能无法正确判断应当点击哪一个</string>
    <string name="multi_id_other">此 id 在页面不止一次使用，可能造成误判</string>
    <string name="cannot_set_here">不允许在此处设置规则</string>
    <string name="new_rule">新建规则</string>
    <string name="rule_for_not_set">未设置</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="everyday">每天</string>
    <string name="week_day_pre">周</string>
    <string name="select_mode">选择模式</string>
    <string name="confirm_delete_with_content">确定删除%s吗？</string>
    <string name="output">导出</string>
    <string name="perform_action_to_rule">对规则执行操作</string>
    <string name="action_not_invertible">此操作不可逆，请谨慎删除。</string>
    <string name="have_timed_rule_on">有定时任务启用</string>
    <string name="service_not_enabled_short">不见君服务未开启</string>
    <string name="back_last_failed">返回上一页失败，直接退出程序：</string>
    <string name="service_destroyed" translatable="false">不见君服务可能被系统错误退出了</string>
    <string name="go_accessib_for_reopen">请前往系统无障碍设置重新打开它！</string>
    <string name="welcome_disclaimer_msg">免责声明：所有规则都是用户所设置的，软件本身并不提供，也不对用户的规则及其后果负责</string>
    <string name="reserve_now">现在预约</string>
    <string name="reserve_still">预约还剩%s分</string>
    <string name="settings_export_single_msg">请在首页该规则菜单中选择”导出“以导出。</string>
    <string name="get_service_log_msg">请到系统文件应用中前往 %s/logs 以手动导出所需要的日志。</string>
    <string name="havent_all_finish">还没设置完呢，请重试</string>
    <string name="webpage">官网</string>
    <string name="update_msg">本次更新有以下内容：</string>
    <string name="update_title">有软件更新！</string>
    <string name="update_now">现在就下载</string>
    <string name="auto_update_check">自动检测更新</string>
    <string name="update_manually">手动检测更新</string>
    <string name="might_bad">不见君可能出了个错？</string>
    <string name="remove_view_failed">消除遮罩失败</string>
    <string name="no_update_cur">当前没有更新，祝生活愉快～</string>
    <string name="update_check_in_progress">正在查询中……</string>
</resources>