<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/settings_general">

        <SwitchPreferenceCompat
            app:key="master-switch"
            app:title="@string/master_switch"
            app:defaultValue="true"
            android:widgetLayout="@layout/preference_material_switch" />

        <Preference
            app:key="export"
            app:summary="@string/settings_export_tip"
            app:title="@string/settings_export" />

        <Preference
            app:key="export-single"
            app:summary="@string/settings_export_single_tip"
            app:title="@string/settings_export_single" />

        <EditTextPreference
            app:key="import"
            app:summary="@string/settings_import_tip"
            app:title="@string/settings_import" />

        <SwitchPreferenceCompat
            app:key="auto-update-check"
            app:title="@string/auto_update_check"
            app:defaultValue="true"
            android:widgetLayout="@layout/preference_material_switch" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="advanced_settings"
        app:title="@string/settings_advanced">

        <Preference
            app:key="password"
            app:summary="@string/settings_password_tip"
            app:title="@string/settings_password" />

        <Preference
            app:key="reservation-lock"
            app:summary="@string/reservation_lock_msg"
            app:title="@string/reservation_lock" />

        <Preference
            app:key="timed-settings"
            app:summary="@string/timed_settings_tip"
            app:title="@string/timed_settings" />

        <Preference
            app:key="export-log"
            app:title="@string/export_log" />

    </PreferenceCategory>

</PreferenceScreen>
