<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
    app:backgroundInsetStart="24dp"
    app:backgroundInsetEnd="24dp"
    app:backgroundInsetTop="24dp"
    app:backgroundInsetBottom="24dp"
    android:background="?attr/colorSurface"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardCornerRadius="@dimen/material3_corner">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/timed_edit_dialog_title"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/set_timed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:hint="@string/set_timed_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="4dp"
                    android:id="@+id/rule_for_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:smsp_selectedItemListColor="#E5BC18"
                    app:smsp_isOutlined="true"
                    app:smsp_outlinedBoxColor="#7D7667"
                    app:smsp_hintColor="#7D7667"
                    app:smsp_hint="设置对应的规则" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="14dp">

                    <TextView
                        android:textAlignment="center"
                        android:text="@string/timed_on_or_off"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="4dp"
                        android:id="@+id/timed_mode_sel">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/timed_on"
                            android:text="@string/timed_on" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/timed_off"
                            android:text="@string/timed_off" />

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:textAlignment="center"
                        android:text="@string/timed_on_or_off_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Caption" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="14dp">

                    <TextView
                        android:textAlignment="center"
                        android:text="@string/apply_week"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="4dp"
                        android:id="@+id/timed_week_sel">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/timed_mon"
                            android:text="@string/week_mon" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/timed_tues"
                            android:text="@string/week_tues" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_wed"
                            android:text="@string/week_wed" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_thur"
                            android:text="@string/week_thur" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_fri"
                            android:text="@string/week_fri" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_sat"
                            android:text="@string/week_sat" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_sun"
                            android:text="@string/week_sun" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:id="@+id/timed_only_once"
                            android:text="@string/only_once" />

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

                <TableLayout
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp">

                    <TableRow android:gravity="center_horizontal">

                        <TextView
                            android:text="@string/start_time"
                            android:textAlignment="center"
                            android:layout_width="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/end_time" />
                    </TableRow>

                    <TableRow android:gravity="center_horizontal">

                        <TimePicker
                            android:layout_margin="0dp"
                            android:padding="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner"
                            android:id="@+id/timed_picker_start" />

                        <TimePicker
                            android:layout_margin="0dp"
                            android:padding="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner"
                            android:id="@+id/timed_picker_end" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/timed_ok_button"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/ok" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
