<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="220dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/welcome_msg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                style="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/welcome_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg"
                app:layout_constraintTop_toBottomOf="@id/welcome_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/welcome_msg_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg_2"
                app:layout_constraintTop_toBottomOf="@id/welcome_msg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/welcome_priv_msg_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/welcome_submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_priv_msg"
                    style="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/privacy_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_priv_title"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/orange_700"
                    android:textStyle="bold" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/welcome_submit"
                android:text="@string/start"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>