<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/closure_view"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/closure_title"
            android:textAppearance="?attr/textAppearanceHeadline6" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.chip.ChipGroup
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="4dp"
                    android:id="@+id/closure_type_sel">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/closure_temp"
                        android:text="@string/closure_temp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/closure_forever"
                        android:text="@string/closure_forever" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/set_reopen_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/set_closure_reopen_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="0123456789. 小时" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/closure_ok_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/ok" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
